Deserialization corrected, desk/waitingline example processing correctly a list of passengers loaded externally. TODO: Unit tests